<resources>
    <string name="app_name">DaysRecord</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--toolbar menu-->
    <string name="option_search">搜索</string>
    <string name="option_new_message">新建留言</string>
    <!--toolbar menu end-->


    <!--left drawer menu-->
    <string name="option_home">主页</string>
    <string name="option_event">事件</string>
    <string name="option_message">留言</string>
    <string name="option_setting">设置</string>
    <!--left drawer menu end-->

    <!--home fragment-->
    <string name="male_name"> </string>
    <string name="female_name"> </string>
    <string name="days">%1$d天</string>
    <!--home fragment end-->


    <!--record detail activity-->
    <string name="option_done">完成</string>
    <string name="option_delete">删除</string>
    <string name="option_mark">收藏</string>
    <string name="option_more_options">更多选项</string>

    <string name="confirm_message">确认删除此记录？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <!--end record detail activity menu-->

    <!--new message activity-->
    <string name="new_message_activity_title">新建留言</string>
    <string name="button_text">发表</string>
    <string name="new_message_hint">请输入你的留言…</string>
    <!--end new message activity-->

</resources>