<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/option_mark"
        android:title="@string/option_mark"
        android:icon="@drawable/ic_baseline_unmark_24"
        app:showAsAction="always"/>

    <item android:id="@+id/option_delete"
        android:title="@string/option_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always"/>

    <item android:id="@+id/option_more_options"
        android:title="@string/option_more_options"
        android:icon="@drawable/ic_baseline_more_options_24"
        app:showAsAction="always"/>

    <item android:id="@+id/option_done"
        android:title="@string/option_done"
        android:icon="@drawable/ic_baseline_done_24"
        app:showAsAction="always"/>


</menu>